--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,10 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'androidx.navigation.safeargs.kotlin'
+
+
+
 }
 
 android {
@@ -45,12 +49,19 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
     implementation 'com.afollestad.material-dialogs:core:3.3.0'
     //image picker
-    //implementation 'com.github.dhaval2404:imagepicker:2.1'
+
+
+    //the Navigation component
+    implementation"androidx.navigation:navigation-fragment-ktx:2.4.2"
+    implementation"androidx.navigation:navigation-ui-ktx:2.4.2"
+
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
+    //Retrofit
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.google.dagger:hilt-android:2.41'
+    //circleimageview
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
